# libmessage

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
cmake/: ProtoCompile.cmake
definition/: CMakeLists.txt
definition/swift-mt/: CMakeLists.txt
definition/swift-mt/src/: WebMessageIndex.cpp
definition/swift-mt/src/antlr/: SwiftMtComponentFormat.g4  SwiftMtComponentFormatParser.g4
definition/swift-mt/src/definition/: ComponentFormatStack.cpp  ComponentFormatStack.hpp  ComponentNameStack.cpp  ComponentNameStack.hpp  MessageIndexParser.cpp  MessageIndexParser.hpp  SequenceStack.cpp  SequenceStack.hpp
definition/swift-mt/src/proto/: SwiftMtComponentDefinition.proto  SwiftMtMsgDefinition.pb.cc  SwiftMtMsgDefinition.pb.h  SwiftMtMsgDefinition.proto
definition/swift-mt/src/web/: MessageIndex.cpp  MessageIndex.hpp  MessageIndexEntry.cpp  MessageIndexEntry.hpp  WebDefinitionRepository.cpp  WebDefinitionRepository.hpp
utils/: CMakeLists.txt
utils/include/http/: HtmlDocument.hpp  HttpClient.hpp
utils/include/log/: Log.hpp
utils/include/misc/: const_literals.hpp
utils/include/string/: comparison.hpp  conversion.hpp
utils/src/http/: HtmlDocument.cpp  HttpClient.cpp
utils/src/log/: Log.cpp
utils/src/string/: comparison.cpp  conversion.cpp
